[package]
name = "cdl-list-rs"
version = "0.1.0"
edition = "2021"
license-file = "MIT"
description = "A circular doubly linked list implementation using Rc<T> and RefCell<T>"
repository = "https://github.com/Jack-Bass/cdl-list-rs"
readme = "README.md"
categories = ["data-structures"]
keywords = ["circular", "doubly-linked-list", "dequeue"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
